--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             width="500px"
             height="300px"
           />
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam praesentium corrupti nostrum inventore cupiditate vel commodi voluptate et ratione? Consectetur, provident. Nulla, praesentium odio! Fuga quod non beatae? Quam, voluptatum?</p>
+          <p>War Thunder är det mest omfattande free-to-play, cross-platform, MMO-militärspel fokuserad på militärfordon. I War Thunder samarbetar flygplan, attackhelikoptrar, markstyrkor och fartyg i realistiska tävlingsstrider. Du kan välja mellan över 1700 fordon och ett stort antal stridsituationer</p>
         </li>
         <li>
           <img
@@ -142,7 +142,7 @@
             width="500px"
             height="300px"
           />
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati expedita architecto tempora voluptate! Exercitationem voluptates vero quisquam unde tempore repudiandae et perspiciatis ex, id itaque nesciunt non laborum tempora ipsum!</p>
+          <p>Hell Let Loose är ett extremt roligt spel som inte handlar om antal dödade och upplåsningar, utan lagarbete är nyckeln till framgångsrikt spel. Kommunikation är livsviktigt. Spelarna arbetar tillsammans under ledningen av officerare och deras befälhavare för att ta strategiska mål på slagfältet och dominera motståndet i stora 100 spelare multiplayer matcher</p>
         </li>
         <li>
           <img
@@ -151,7 +151,7 @@
             width="500px"
             height="300px"
           />
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem nam repellendus voluptate iure voluptatem distinctio culpa quod! Eum quibusdam facilis eaque cupiditate! Error, ut voluptatibus culpa nihil quidem pariatur qui.</p>
+          <p>Hearts of Iron IV är ett andra världskriget strategi spel där man kan spela som vilket land udner andra världskriget och ta hand om ekonomi, politik och militären där du kan bli en warmonger och ta över hela världen. Detta spel är extra kul online där man även blandar in roleplay och jämför templates och pratar diplomatiskt. Hearts of iron 4 är lätt på utsidan men man kan gå djupt in i spelet och lära sig Metan</p>
         </li>
       </ul>
     </section>
